<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/ServiceFragment">

    <fragment
        android:id="@+id/ServiceFragment"
        android:name="com.se3.ase.ui.servicesAuth.ServiceAuthFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_service_auth" />

    <fragment
        android:id="@+id/AppointmentFragment"
        android:name="com.se3.ase.ui.appointments.AppointmentsFragment"
        android:label="@string/title_appointments"
        tools:layout="@layout/fragment_appointments" />

    <fragment
        android:id="@+id/NotificationFragment"
        android:name="com.se3.ase.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>