<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VisitorHomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ASE.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.ASE.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_app"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/accountIcon"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_person_24"/>
            <TextView
                android:id="@+id/account_redirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login/Register"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@drawable/login_text_bg"
                android:layout_gravity="end"/>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/visitor_home_tablayout">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_services" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_popular" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_aboutus" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/visitor_home_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>